--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "Tasdiq",
   "license": "ISC",
   "lint-staged": {
-    "src/**/*.ts":"yarn lint-prettier"
+    "src/**/*.ts": "yarn lint-prettier"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
@@ -34,6 +34,10 @@
     "dotenv": "^16.1.3",
     "eslint": "^8.41.0",
     "express": "^4.18.2",
-    "mongoose": "^7.2.2"
+    "http-status": "^1.6.2",
+    "mongoose": "^7.2.2",
+    "winston": "^3.9.0",
+    "winston-daily-rotate-file": "^4.7.1",
+    "zod": "^3.21.4"
   }
 }
